--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="app/app.component.css" rel="stylesheet" />
+
 </head>
 <body>
   <app-root>Loading...</app-root>
