epost login fix

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>BorrowSys</title>
+  <title>Pigify - Your Library of Things!</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<app-root>Loading...</app-root>
 
 </body>
 </html>
